<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_home"
        android:title="@string/nav_home"
        android:icon="@drawable/ic_action_home_light"
        />

    <item
        android:id="@+id/bottom_nav_profile"
        android:title="@string/nav_profile"
        android:icon="@drawable/ic_action_account_box_light"
        />

    <item
        android:id="@+id/bottom_nav_users"
        android:title="@string/nav_users"
        android:icon="@drawable/ic_action_users_light"
        />


    <item
        android:id="@+id/bottom_nav_cars"
        android:title="@string/bottom_nav_cars"
        android:icon="@drawable/ic_action_car"
        />


    <item
        android:id="@+id/bottom_nav_packages"
        android:title="@string/bottom_nav_packages"
        android:icon="@drawable/ic_action_packages"
        />
</menu>