<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="20dp"
    tools:context=".admin.AdminAddNewCarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_car_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/admin_add_car_brand_of_the_car"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/colorTint" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_car_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/admin_add_car_model_of_the_car"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/colorTint" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_car_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/admin_add_car_color_of_the_car"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/colorTint" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_car_released_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/admin_add_car_released_year_of_the_car"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/colorTint" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_car_passengers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/admin_add_car_number_of_passengers"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/colorTint" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_car_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/admin_add_car_condition"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/colorTint" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_car_description"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="top"
            android:hint="@string/admin_add_car_description_of_the_car"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/colorTint"

            />

        <ImageView
            android:id="@+id/add_car_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/add_photo" />

        <Button
            android:id="@+id/add_car_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@color/colorAccent"
            android:text="@string/admin_add_button_add_car"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>