<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="20dp"
    tools:context=".admin.AdminLoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_sign_in_text"
        android:textAlignment="center"
        android:textColor="@color/colorTint"
        android:textSize="25sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/admin_login_email_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColorHint="@color/colorTint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/admin_login_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/admin_email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/colorTint" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/admin_login_password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/admin_login_email_title"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColorHint="@color/colorTint"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/admin_login_edit_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/admin_password_hint"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/colorTint" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/admin_login_action_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/admin_login_password_title"
        android:layout_centerHorizontal="true"
        android:text="@string/admin_sign_in_button_text" />

    <TextView
        android:id="@+id/admin_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/admin_login_google"
        android:text="@string/admin_forgot_password_reset_text"
        android:textAlignment="center"
        android:textColor="@color/colorTint"
        android:layout_marginTop="10dp"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/admin_login_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/admin_login_action_button"
        android:layout_centerHorizontal="true">

    </com.google.android.gms.common.SignInButton>

    <TextView
        android:id="@+id/admin_check_please_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/admin_check_please_sign_up"
        android:textAlignment="center"
        android:textColor="@color/colorTint" />


</RelativeLayout>